1.13.0
---
- libmpg123 API version 26 (see NEWS.libmpg123)
- Cleanup of symbols for the static library: Only have global symbols that are actually needed, prefix them with INT123_ to avoid conflicts.
- Added --streamdump to get a copy of the data libmpg123 used.
TODO:
- Remove compiler directives for alignment and disable associated tests.
  The tests don't work on a wide range of compilers anyway, and newer gccs
  do have force_align_arg_pointer to fix bad stacks.
- Get the first pieces of raw API in -- the public_struct stuff!
- There is no ChangeLog file anymore... it was autogenerated from subversion log anyway, so look there if interested.

1.12.2
---
- Fix for nasty memory corruption on configurations that hand out addresses in the upper half of the memory space (the poiner alignment function broke in that case, bug 2996045).
- Various build and portability fixes (including making some exotic configure switches work (again)).
- Add dump_seekindex example
- Sync mpg123_clr to 1.12 feature set, patch provided by Malcolm Boczek
  And actually include it in release tarball!
- Rework mpg123.h logic for large file stuff a bit, clients can control it by defining MPG123_NO_LARGENAME or MPG123_LARGESUFFIX.
- Include dumb wrappers to provide names suffixed with _64 on 64 bit machines and _32 on 32 bit machines, respectively, to help clients that insist on defining _FILE_OFFSET_BITS where it is not needed (or with a non-large value).
- Tuning of the internal buffer code for feeder mode to minimize its performance impact (works in 4K blocks now).
- Workaround for compiler bugs in Open64/PathScale/SunStudio (bug 3004396, suggestion by Doug Gilmore).
  Note that Sun Studio is still a tricky fellow, at least when it comes to our preprocessed assembly.
  Also, x86-Open64 recently produced another segfault in layer3.c on my box... GNU and intel compilers are what one can use as something stable.
- Make mpg123_getformat() return more error codes (like MPG123_NEED_MORE).